--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #ffcccc;
+      * warna jadi merah muda */
       margin: 0;
       padding: 0;
     }
